crates/tmark-writers/tests/snapshots/fixtures__diag-ref-unresolved@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
\subsection{Intro}\label{sec:intro}

See Section~\ref{sec:intro}, Section~\ref{sec:intro} and \hyperref[sec:intro]{the intro}, but not [?sec:nope].

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
