crates/tmark-writers/tests/snapshots/fixtures__diag-ref-unresolved@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
== Intro <sec:intro>

See #ref(<sec:intro>, supplement: [Section]), #ref(<sec:intro>, supplement: [Section]) and #link(<sec:intro>)[the intro], but not \[?sec:nope\].

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
