crates/tmark-writers/tests/snapshots/fixtures__diag-table-column-unknown@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<table>
<thead>
<tr>
<th rowspan="2">Year</th>
<th colspan="2">Actual</th>
</tr>
<tr>
<th>H1</th>
<th>H2</th>
</tr>
</thead>
<tbody>
<tr>
<td>2024</td>
<td></td>
<td></td>
</tr>
</tbody>
</table>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
