crates/tmark-writers/tests/snapshots/fixtures__diag-table-column-unknown@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
\begin{center}
\begin{tabular}{lll}
\toprule
\multirow{2}{*}{Year} & \multicolumn{2}{c}{Actual} \\
\cmidrule(lr){2-3}
 & H1 & H2 \\
\midrule
2024 &  &  \\
\bottomrule
\end{tabular}
\end{center}

---requires---
{
  "packages": [
    "booktabs",
    "multirow"
  ],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
