crates/tmark-writers/tests/snapshots/fixtures__diag-table-columns@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<table>
<thead>
<tr>
<th>A</th>
</tr>
</thead>
<tbody>
<tr>
<td>1</td>
</tr>
</tbody>
</table>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
